[package]
name = "synsert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.10.0"
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
rangemap = "1.4.0"
ropey = "1.6.0"
syn = { version = "2.0.37", default-features = false, features = [
    "full",
    "visit",
] }

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
syn = { version = "2.0.37", default-features = false, features = [
    "parsing",
    "printing",
    "extra-traits",
] }
