[package]
name = "synsert"
version = "0.1.0"
edition = "2021"
description = "A primitive for writing structural search and replace programs for rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aatifsyed/synsert"
homepage = "https://crates.io/crates/synsert"
documentation = "https://docs.rs/synsert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
rangemap = "1.4.0"
ropey = "1.6.0"
syn = { version = "2.0.37", default-features = false, features = [
    "printing",
    "parsing",
] }

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
console = "0.15.7"
derive-quote-to-tokens = "0.1.1"
dialoguer = { version = "0.11.0", default-features = false }
indoc = "2.0.4"
pretty_assertions = "1.4.0"
quote = { version = "1.0.35", default-features = false }
rustc_parse_format = { git = "https://github.com/rust-lang/rust", default-features = false }
similar = { version = "2.2.1", features = ["text", "inline", "bytes"] }
syn = { version = "2.0.37", default-features = false, features = [
    "full",
    "extra-traits",
    "visit",
    "clone-impls",
] }
