[package]
name = "synsert"
version = "0.1.2"
edition = "2021"
description = "A primitive for writing structural search and replace programs for rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aatifsyed/synsert"
homepage = "https://crates.io/crates/synsert"
documentation = "https://docs.rs/synsert"

[features]
default = ["harness"]
harness = [
  "dep:console",
  "dep:similar",
  "dep:dialoguer",
  "syn/visit",
  "syn/full",
]

[workspace]
members = ["rustc_lexer", "rustc_parse_format"]

[dependencies]
console = { version = "0.15.7", optional = true }
proc-macro2 = { version = "1.0.68", default-features = false, features = [
    "span-locations",
] }
rangemap = "1.4.0"
ropey = "1.6.0"
rustyline = "14.0.0"
syn = { version = "2.0.37", default-features = false, features = [
    "printing",
    "parsing",
] }
similar = { version = "2.2.1", features = [
    "text",
    "inline",
    "bytes",
], optional = true }
dialoguer = { version = "0.11.0", default-features = false, optional = true }

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
console = "0.15.7"
derive-quote-to-tokens = "0.1.1"
dialoguer = { version = "0.11.0", default-features = false }
indoc = "2.0.4"
itertools = "0.12.1"
pretty_assertions = "1.4.0"
prettyplease = "0.2.17"
quote = { version = "1.0.35", default-features = false }
similar = { version = "2.2.1", features = ["text", "inline", "bytes"] }
syn = { version = "2.0.37", default-features = false, features = [
    "full",
    "extra-traits",
    "visit",
    "clone-impls",
] }
syn-miette = "0.3.0"
rustc_parse_format = { path = "rustc_parse_format" }
